# snowflake

./: .codespellrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .rat-apache  .rat-excludes  CONTRIBUTING.md  Makefile  NOTICE.txt  README.md  dummy.go  go.mod  go.sum  main.go  manifest.toml
.github/workflows/: dev.yaml  dev_issues.yaml  dev_pr.yaml  generate.toml  go.yaml  go_release.yaml  go_test.yaml  go_test_pr.yaml  release.yaml  rust_test.yaml  test.yaml
csharp/: .gitignore  AdbcDrivers.Snowflake.sln  Directory.Build.props  run_benchmark.ps1
csharp/src/Interop/: AdbcDrivers.Snowflake.Interop.csproj  Build-SnowflakeDriver.ps1  SnowflakeDriverLoader.cs  copySnowflakeDriver.sh  readme.md
csharp/src/Native/: AdbcDrivers.Snowflake.Native.csproj  InMemoryArrowStream.cs  SnowflakeConnection.GetObjects.cs  SnowflakeConnection.cs  SnowflakeDatabase.cs  SnowflakeStatement.cs  readme.md
csharp/src/Native/Configuration/: AuthenticationConfig.cs  AuthenticationType.cs  ConnectionConfig.cs  ConnectionStringParser.cs
csharp/test/Interop/: AdbcDrivers.Snowflake.Interop.Tests.csproj  CastTests.cs  ClientTests.cs  ConstraintTests.cs  DriverTests.cs  ErrorHandlingTests.cs  NumericOperatorTests.cs  SnowflakeData.cs  SnowflakeTestConfiguration.cs  SnowflakeTestingUtils.cs  StatementTests.cs  ValueTests.cs  readme.md
csharp/test/Interop/Resources/: SnowflakeConstraints.sql  SnowflakeData.sql  snowflakeconfig.json
csharp/test/Native/: ChunkedArrowArrayStreamTests.cs  KeyPairAuthenticatorTests.cs  QueryExecutorCommandResultTests.cs  QueryExecutorEmptyResultTests.cs  QueryExecutorFaultTests.cs  QueryExecutorHeartbeatTests.cs  QueryExecutorInProgressTests.cs  QueryExecutorTests.cs  RequestBuilderTests.cs  SnowflakeConnectionTransactionTests.cs  SnowflakeDatabaseTests.cs  SnowflakeResultArrowStreamTests.cs  TypeConverterTests.cs  readme.md
csharp/test/Native/Configuration/: ConnectionStringParserTests.cs
csharp/test/Native/ConnectionPool/: ConnectionPoolManagerTests.cs  PooledConnectionTests.cs
go/: binding.go  binding_test.go  bulk_ingestion.go  bulk_ingestion_test.go  connection.go  connection_getstatistics.go  database.go  driver.go  driver_test.go  get_objects_direct.go  get_objects_scope_test.go  go.mod  go.sum  manifest.toml  pixi.toml  record_reader.go  record_reader_test.go  statement.go  statement_test.go
go/ci/: test_package.py
go/docs/: snowflake.md
go/pkg/: driver.go  utils.h
go/queries/: get_objects_all.sql
go/validation/: README.md  __init__.py  pytest.ini
go/validation/tests/: __init__.py  conftest.py  generate_documentation.py  snowflake.py  test_connection.py  test_ingest.py  test_query.py  test_statement.py
rust/: .gitattributes  .gitignore  Cargo.toml  about.toml  build.rs  license.tpl  manifest.toml  pixi.toml
rust/.cargo/: config.toml
rust/adbc-snowflake/: Cargo.toml
rust/adbc-snowflake/src/: connection.rs  database.rs  driver.rs  error.rs  lib.rs  statement.rs
rust/adbc-snowflake/tests/: integration.rs
rust/ci/: test_package.py
rust/ci/scripts/: pre-build.sh
rust/docs/: snowflake.md
rust/src/: connection.rs  database.rs  driver.rs  error.rs  get_objects.rs  ingest.rs  lib.rs  statement.rs
rust/tests/: integration.rs
rust/validation/: README.md  README_sf_core_limitations.md
rust/validation/queries/ingest/: binary.txtcase  binary_view.toml  fixed_size_binary.txtcase  large_string.txtcase  time_us.txtcase  timestamp_ms.txtcase  timestamp_s.txtcase  timestamp_us.txtcase  timestamptz_ns.txtcase  timestamptz_us.txtcase
rust/validation/queries/type/bind/: date.toml  decimal.toml  decimal.txtcase  float16.txtcase  float64.json  time_ms.txtcase  time_ns.txtcase  time_s.txtcase  time_us.txtcase  timestamp_ms.txtcase  timestamp_ns.txtcase  timestamp_s.txtcase  timestamp_us.txtcase  timestamptz_ms.txtcase  timestamptz_ns.txtcase  timestamptz_s.txtcase  timestamptz_us.txtcase
rust/validation/queries/type/literal/: binary.sql  decimal.json  timestamp.sql  timestamptz.sql
rust/validation/queries/type/select/: binary.setup.sql  decimal.json  string.setup.sql  timestamptz.setup.sql
rust/validation/tests/: __init__.py  snowflake.py
(+138 files in other folders)
