[package]
name = "adbc-snowflake"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
adbc_core = "0.22.0"
adbc_ffi  = "0.22.0"
sf_core   = { git = "https://github.com/snowflakedb/universal-driver", subdirectory = "sf_core" }
arrow-array  = { version = ">=53.1.0, <59", default-features = false, features = ["ffi"] }
arrow-schema = { version = ">=53.1.0, <59", default-features = false }
tokio        = { version = "1", features = ["rt-multi-thread"] }
